[project]
name = "my_agent"
version = "0.1.0"
description = "Lightweight RAG Agent with Qdrant + OpenAI"
authors = [
    {name = "Ramsha Akhter", email = "ramshaakhter2001@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"

[tool.poetry]
packages = [
    { include = "my_agent" }
]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
openai = "^1.0.0"
qdrant-client = "^1.9.0"
tiktoken = "^0.7.0"
sentence-transformers = "^2.2.2"
transformers = "^4.40.0"
pdfplumber = "^0.11.0"
beautifulsoup4 = "^4.12.2"
readability-lxml = "^0.8.1"
python-dotenv = "^1.0.0"
requests = "^2.32.3"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
 